--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Vrakashy</title>
+    <link rel="stylesheet" href="js/style/style.css">
     <script src="./js/libs/requirejs/require.js" data-main="./js/main.js"></script>
 </head>
 <body>
