social 0.2.5 - edit profile was added

--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Vrakashy</title>
-    <link rel="stylesheet" href="js/style/style.css">
+    <link rel="stylesheet" href="js/styles/style.css">
     <script src="./js/libs/requirejs/require.js" data-main="./js/main.js"></script>
 </head>
 <body>
